<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_env</name>
  <version>0.0.0</version>
  <description>This pkg is created to organize the test environment files for the GADEN gas disperion simulator</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
